infrastructure/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: recipes
spec:
  selector:
    app: mealie
  ports:
    - port: 9000
      targetPort: 9000
