infrastructure/mealie/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: recipes
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`recipes.jklu-lab.eu`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
  tls: {}
